--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^14.4.3",
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
+    "react-chat-ui": "^0.4.0",
     "react-dom": "^18.2.0",
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^6.11.1",
