--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://susbhh.github.io/weiqinghan.com",
+  "homepage": "https://susbhh.github.io",
   "name": "personalproject",
   "version": "0.1.0",
   "private": true,
