--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-chat-ui": "^0.4.0",
     "react-dom": "^18.2.0",
+    "react-measure": "^2.5.2",
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
