--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://weiqinghan.com",
+  "homepage": "https://susbhh.github.io/weiqinghan.com/",
   "name": "personalproject",
   "version": "0.1.0",
   "private": true,
@@ -30,7 +30,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "main -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
