--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://wieqinghan.com/",
+  "homepage": "https://weiqinghan.com/",
   "name": "personalproject",
   "version": "0.1.0",
   "private": true,
